[gd_scene load_steps=6 format=2]

[ext_resource path="res://stations/election/election.gd" type="Script" id=1]
[ext_resource path="res://stations/election/table/Table.tscn" type="PackedScene" id=2]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.65098, 0.266667, 0.0745098, 1 )
metallic = 0.43
metallic_specular = 0.63

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5, 0.05, 1 )

[node name="Election" type="StaticBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LeftTable" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2, 0 )

[node name="RightTable" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, 0 )

[node name="CenterTable" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )
